--- a/contatti.html
+++ b/contatti.html
@@ -9,9 +9,8 @@
       content="Richiedi un sopralluogo tecnico: contatti telefonici, email e modulo per assistenza antincendio a Roma."
     />
     <link rel="canonical" href="https://www.bortoneantincendio.it/contatti.html" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16.png" />
-    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="assets/loghetto.png" />
+    <link rel="apple-touch-icon" href="assets/loghetto.png" />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#0b0b0b" />
     <meta property="og:site_name" content="Bortone Antincendio" />
@@ -22,16 +21,22 @@
       content="Richiedi un sopralluogo tecnico: contatti telefonici, email e modulo per assistenza antincendio a Roma."
     />
     <meta property="og:url" content="https://www.bortoneantincendio.it/contatti.html" />
+    <meta property="og:locale" content="it_IT" />
     <meta
       property="og:image"
-      content="https://www.bortoneantincendio.it/assets/og-bortone-1200x630.png"
+      content="https://www.bortoneantincendio.it/assets/logo.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Bortone Antincendio - Protezione antincendio a Roma" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Contatti | Bortone Antincendio" />
+    <meta name="twitter:description" content="Richiedi un sopralluogo tecnico: contatti telefonici, email e modulo per assistenza antincendio a Roma." />
+    <meta name="twitter:image" content="https://www.bortoneantincendio.it/assets/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&amp;family=Source+Sans+3:wght@400;600;700&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Source+Sans+3:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -40,14 +45,7 @@
     <header class="site-header">
       <div class="container header-inner">
         <a class="logo" href="index.html" aria-label="Bortone Antincendio">
-          <img
-            src="assets/logo-bortone.webp"
-            alt="Logo Bortone Antincendio"
-            width="646"
-            height="806"
-            decoding="async"
-          />
-          <span>Bortone Antincendio</span>
+          <img src="assets/logo-bortone.svg" alt="Logo Bortone Antincendio" width="646" height="806" />
         </a>
         <button class="nav-toggle" aria-expanded="false" aria-controls="site-nav" aria-label="Apri menu">
           Menu
@@ -57,8 +55,8 @@
           <a href="servizi.html">Servizi</a>
           <a href="chi-siamo.html">Chi siamo</a>
           <a class="active" href="contatti.html">Contatti</a>
+          <a href="area-clienti.html">Area Clienti</a>
         </nav>
-        <a class="button primary small" href="contatti.html">Richiedi un sopralluogo</a>
       </div>
     </header>
 
@@ -73,10 +71,11 @@
             <p class="reveal contact-hero-hours" data-delay="1">
               Orari ufficio: Lun-Ven 08:00-13:00, 14:30-17:00
             </p>
-            <div class="contact-hero-grid reveal" data-delay="2">
+            <div class="contact-hero-grid-wrap reveal" data-delay="2">
+              <div class="contact-hero-grid">
               <div class="contact-hero-item">
                 <div class="contact-hero-emoji">📲</div>
-                <p class="contact-hero-text">Tel. &amp; Fax 06 / 70.300.981</p>
+                <p class="contact-hero-text">Tel. 06 / 70.300.981</p>
                 <a class="button contact-hero-link" href="tel:+390670300981">Chiama</a>
               </div>
               <div class="contact-hero-item">
@@ -98,6 +97,24 @@
                   Maps
                 </a>
               </div>
+              </div>
+            </div>
+            <div class="review-cta reveal" data-delay="4">
+              <div class="review-cta-content">
+                <p class="review-cta-title">Sei già nostro cliente? Lascia una recensione</p>
+                <a
+                  class="button review-cta-link"
+                  href="https://search.google.com/local/writereview?placeid=ChIJhQ_Z4CFiLxMR8XWI-L-wn_M"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  <span class="review-stars" aria-hidden="true">★★★★★</span>
+                  Lascia una recensione su Google
+                </a>
+                <p class="review-cta-note">
+                  Grazie per il tuo feedback: ci aiuta a migliorare il servizio ogni giorno.
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -105,13 +122,16 @@
 
       <section class="section">
         <div class="container">
-          <div class="section-header">
-            <h2 class="reveal">Invia una richiesta</h2>
-            <p class="reveal" data-delay="1">
-              Compila il modulo e sarai ricontattato dal nostro team tecnico.
-            </p>
-          </div>
-          <div class="card-grid">
+          <div class="contact-cards-grid">
+            <div class="contact-card-header">
+              <h2 class="reveal">Invia una richiesta</h2>
+              <p class="reveal" data-delay="1">
+                Compila il modulo e sarai ricontattato dal nostro team tecnico.
+              </p>
+            </div>
+            <div class="contact-card-header">
+              <h2 class="reveal">Passaci a trovare</h2>
+            </div>
             <div class="card reveal contact-form-card">
               <form id="contact-form" class="form-grid" action="https://formspree.io/f/mykdylqn" method="post">
                 <input type="hidden" name="subject" value="Richiesta contatto dal sito" />
@@ -119,10 +139,10 @@
                 <input type="email" name="email" placeholder="Email" required />
                 <input type="tel" name="phone" placeholder="Telefono" />
                 <textarea name="message" placeholder="Messaggio" required></textarea>
-                <button class="button primary" type="submit">Invia richiesta</button>
                 <p class="form-hint" id="form-status">
                   I messaggi vengono inoltrati a info@bortoneantincendio.it.
                 </p>
+                <button class="button primary contact-cta-btn" type="submit">Invia richiesta</button>
               </form>
             </div>
             <div class="card reveal contact-map-card" data-delay="1">
@@ -136,7 +156,7 @@
               </div>
               <div class="hero-actions map-actions">
                 <a
-                  class="button ghost"
+                  class="button primary contact-cta-btn"
                   href="https://www.google.com/maps/search/?api=1&query=Via+Casilina+313A+00176+Roma"
                   target="_blank"
                   rel="noopener"
@@ -156,12 +176,10 @@
           <div class="footer-brand">
             <img
               class="footer-logo"
-              src="assets/logo-bortone.webp"
+              src="assets/loghetto-black.svg"
               alt="Logo Bortone Antincendio"
               width="646"
               height="806"
-              loading="lazy"
-              decoding="async"
             />
             <div>
               <strong>Bortone Antincendio</strong>
@@ -177,12 +195,14 @@
         </div>
       </div>
       <div class="container footer-legal">
+        <a href="privacy.html">Privacy</a>
+        <br />
         © 2026 Bortone Antincendio SRL | CF 09780201001 | REA 1189188
         <br />
         PEC amministrazione@pec.bortoneantincendio.it
       </div>
     </footer>
 
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
   </body>
 </html>
