--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
       content="Manutenzione e gestione impianti antincendio a Roma. Estintori, porte tagliafuoco, reti idranti e rivelazione incendi con assistenza tecnica."
     />
     <link rel="canonical" href="https://www.bortoneantincendio.it/" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16.png" />
-    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="assets/loghetto.png" />
+    <link rel="apple-touch-icon" href="assets/loghetto.png" />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#0b0b0b" />
     <meta property="og:site_name" content="Bortone Antincendio" />
@@ -22,20 +21,26 @@
       content="Manutenzione e gestione impianti antincendio a Roma. Estintori, porte tagliafuoco, reti idranti e rivelazione incendi con assistenza tecnica."
     />
     <meta property="og:url" content="https://www.bortoneantincendio.it/" />
+    <meta property="og:locale" content="it_IT" />
     <meta
       property="og:image"
-      content="https://www.bortoneantincendio.it/assets/og-bortone-1200x630.png"
+      content="https://www.bortoneantincendio.it/assets/logo.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Bortone Antincendio - Protezione antincendio a Roma" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Bortone Antincendio | Protezione antincendio a Roma" />
+    <meta name="twitter:description" content="Manutenzione e gestione impianti antincendio a Roma. Estintori, porte tagliafuoco, reti idranti e rivelazione incendi con assistenza tecnica." />
+    <meta name="twitter:image" content="https://www.bortoneantincendio.it/assets/logo.png" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Bortone Antincendio",
         "url": "https://www.bortoneantincendio.it/",
-        "logo": "https://www.bortoneantincendio.it/assets/logo-bortone.png",
-        "image": "https://www.bortoneantincendio.it/assets/logo-bortone.png",
+        "logo": "https://www.bortoneantincendio.it/assets/logo-bortone.svg",
+        "image": "https://www.bortoneantincendio.it/assets/logo-bortone.svg",
         "description": "Manutenzione e gestione impianti antincendio a Roma per aziende e condomini.",
         "telephone": "+390670300981",
         "email": "info@bortoneantincendio.it",
@@ -58,7 +63,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&amp;family=Source+Sans+3:wght@400;600;700&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Source+Sans+3:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -67,14 +72,7 @@
     <header class="site-header">
       <div class="container header-inner">
         <a class="logo" href="index.html" aria-label="Bortone Antincendio">
-          <img
-            src="assets/logo-bortone.webp"
-            alt="Logo Bortone Antincendio"
-            width="646"
-            height="806"
-            decoding="async"
-          />
-          <span>Bortone Antincendio</span>
+          <img src="assets/logo-bortone.svg" alt="Logo Bortone Antincendio" width="646" height="806" />
         </a>
         <button class="nav-toggle" aria-expanded="false" aria-controls="site-nav" aria-label="Apri menu">
           Menu
@@ -84,23 +82,25 @@
           <a href="servizi.html">Servizi</a>
           <a href="chi-siamo.html">Chi siamo</a>
           <a href="contatti.html">Contatti</a>
+          <a href="area-clienti.html">Area Clienti</a>
         </nav>
-        <a class="button primary small" href="contatti.html">Richiedi un sopralluogo</a>
       </div>
     </header>
 
     <main>
       <section class="hero">
+        <div class="hero-stripe" aria-hidden="true"></div>
         <div class="container hero-grid">
-          <div>
+          <div class="hero-content">
             <p class="hero-eyebrow">Azienda antincendio operativa a Roma</p>
             <h1 class="reveal">Manutenzione e gestione impianti antincendio</h1>
-            <p class="reveal" data-delay="1">
+            <p class="reveal hero-lead" data-delay="1">
               Progettazione, fornitura e manutenzione di estintori, porte tagliafuoco, reti idranti
               e sistemi di rivelazione. Interventi programmati e assistenza tecnica.
             </p>
             <div class="hero-actions reveal" data-delay="2">
-              <a class="button ghost" href="servizi.html">Vedi i servizi</a>
+              <a class="button primary" href="contatti.html">Richiedi un sopralluogo</a>
+              <a class="button hero-ghost home-services-cta" href="servizi.html">Vedi i servizi</a>
             </div>
           </div>
           <div class="hero-card reveal" data-delay="3">
@@ -129,7 +129,7 @@
                 </span>
                 <div>
                   <strong>Manutenzione su misura</strong>
-                  <p>Interventi programmati in base al rischio e all'attivita.</p>
+                  <p>Interventi programmati in base al rischio e all'attività.</p>
                 </div>
               </li>
               <li>
@@ -141,7 +141,7 @@
                   </svg>
                 </span>
                 <div>
-                  <strong>Report e conformita normativa</strong>
+                  <strong>Report e conformità normativa</strong>
                   <p>Documentazione digitale sempre aggiornata e conforme.</p>
                 </div>
               </li>
@@ -154,7 +154,7 @@
         <div class="container intro-roma__grid">
           <div class="intro-roma__left">
             <h2 class="intro-roma__title">
-              <span class="intro-roma__accent">Affidabilita</span> sul campo a ROMA
+              <span class="intro-roma__accent">Affidabilità</span> sul campo a ROMA
             </h2>
             <p class="intro-roma__lead">
               Interventi programmati, documentazione in regola e referente tecnico dedicato.
@@ -187,8 +187,8 @@
                   </svg>
                 </span>
                 <div>
-                  <h4>Aziende e attivita commerciali</h4>
-                  <p>Manutenzione programmata per continuita operativa.</p>
+                  <h4>Aziende e attività commerciali</h4>
+                  <p>Manutenzione programmata per continuità operativa.</p>
                 </div>
               </article>
 
@@ -216,7 +216,7 @@
                 </span>
                 <div>
                   <h4>Uffici e strutture produttive</h4>
-                  <p>Sicurezza che protegge la continuita operativa.</p>
+                  <p>Sicurezza che protegge la continuità operativa.</p>
                 </div>
               </article>
             </div>
@@ -233,7 +233,7 @@
               dedicato.
             </p>
             <div class="hero-actions">
-              <a class="button ghost" href="chi-siamo.html">Chi siamo</a>
+              <a class="button primary" href="chi-siamo.html">Chi siamo</a>
             </div>
           </div>
           <div class="stats">
@@ -278,12 +278,10 @@
           <div class="footer-brand">
             <img
               class="footer-logo"
-              src="assets/logo-bortone.webp"
+              src="assets/loghetto-black.svg"
               alt="Logo Bortone Antincendio"
               width="646"
               height="806"
-              loading="lazy"
-              decoding="async"
             />
             <div>
               <strong>Bortone Antincendio</strong>
@@ -299,12 +297,14 @@
         </div>
       </div>
       <div class="container footer-legal">
+        <a href="privacy.html">Privacy</a>
+        <br />
         © 2026 Bortone Antincendio SRL | CF 09780201001 | REA 1189188
         <br />
         PEC amministrazione@pec.bortoneantincendio.it
       </div>
     </footer>
 
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
   </body>
 </html>
