--- a/servizi.html
+++ b/servizi.html
@@ -9,9 +9,8 @@
       content="Servizi antincendio per aziende e condomini: estintori, porte tagliafuoco, reti idranti, rivelazione incendi e consulenza tecnica."
     />
     <link rel="canonical" href="https://www.bortoneantincendio.it/servizi.html" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16.png" />
-    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="assets/loghetto.png" />
+    <link rel="apple-touch-icon" href="assets/loghetto.png" />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#0b0b0b" />
     <meta property="og:site_name" content="Bortone Antincendio" />
@@ -22,16 +21,22 @@
       content="Servizi antincendio per aziende e condomini: estintori, porte tagliafuoco, reti idranti, rivelazione incendi e consulenza tecnica."
     />
     <meta property="og:url" content="https://www.bortoneantincendio.it/servizi.html" />
+    <meta property="og:locale" content="it_IT" />
     <meta
       property="og:image"
-      content="https://www.bortoneantincendio.it/assets/og-bortone-1200x630.png"
+      content="https://www.bortoneantincendio.it/assets/logo.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Bortone Antincendio - Protezione antincendio a Roma" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Servizi | Bortone Antincendio" />
+    <meta name="twitter:description" content="Servizi antincendio per aziende e condomini: estintori, porte tagliafuoco, reti idranti, rivelazione incendi e consulenza tecnica." />
+    <meta name="twitter:image" content="https://www.bortoneantincendio.it/assets/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&amp;family=Source+Sans+3:wght@400;600;700&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Source+Sans+3:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -40,14 +45,7 @@
     <header class="site-header">
       <div class="container header-inner">
         <a class="logo" href="index.html" aria-label="Bortone Antincendio">
-          <img
-            src="assets/logo-bortone.webp"
-            alt="Logo Bortone Antincendio"
-            width="646"
-            height="806"
-            decoding="async"
-          />
-          <span>Bortone Antincendio</span>
+          <img src="assets/logo-bortone.svg" alt="Logo Bortone Antincendio" width="646" height="806" />
         </a>
         <button class="nav-toggle" aria-expanded="false" aria-controls="site-nav" aria-label="Apri menu">
           Menu
@@ -57,40 +55,70 @@
           <a class="active" href="servizi.html">Servizi</a>
           <a href="chi-siamo.html">Chi siamo</a>
           <a href="contatti.html">Contatti</a>
+          <a href="area-clienti.html">Area Clienti</a>
         </nav>
-        <a class="button primary small" href="contatti.html">Richiedi un sopralluogo</a>
       </div>
     </header>
 
     <main>
       <section class="hero">
+        <div class="hero-stripe" aria-hidden="true"></div>
         <div class="container hero-grid">
-          <div>
+          <div class="hero-content">
             <h1 class="reveal">Servizi antincendio per aziende e condomini</h1>
-            <p class="reveal" data-delay="1">
+            <p class="reveal hero-lead" data-delay="1">
               Gestione completa: sopralluogo, progettazione, manutenzione e assistenza tecnica.
             </p>
             <div class="hero-actions reveal" data-delay="2">
               <a class="button primary" href="contatti.html">Richiedi un preventivo</a>
-              <a class="button ghost" href="chi-siamo.html">Metodo operativo</a>
             </div>
           </div>
           <div class="hero-card reveal" data-delay="3">
-            <ul>
-              <li>Sopralluoghi e piani di manutenzione</li>
-              <li>Verifiche periodiche e registri</li>
-              <li>Assistenza tecnica dedicata</li>
+            <ul class="hero-card-list">
+              <li>
+                <span class="hero-card-icon" aria-hidden="true">
+                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6">
+                    <path d="M3 21h18" /><path d="M6 21V6l6-3 6 3v15" /><path d="M9 21v-6h6v6" />
+                  </svg>
+                </span>
+                <div>
+                  <strong>Sopralluoghi e piani di manutenzione</strong>
+                  <p>Analisi e programmazione su misura.</p>
+                </div>
+              </li>
+              <li>
+                <span class="hero-card-icon" aria-hidden="true">
+                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6">
+                    <path d="M12 3l7 3v6c0 5-3.5 8.5-7 9-3.5-.5-7-4-7-9V6l7-3z" />
+                  </svg>
+                </span>
+                <div>
+                  <strong>Verifiche periodiche e registri</strong>
+                  <p>Controlli e documentazione in regola.</p>
+                </div>
+              </li>
+              <li>
+                <span class="hero-card-icon" aria-hidden="true">
+                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6">
+                    <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
+                  </svg>
+                </span>
+                <div>
+                  <strong>Assistenza tecnica dedicata</strong>
+                  <p>Supporto rapido e referente unico.</p>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
       </section>
 
-      <section class="section">
+      <section class="section services-section">
         <div class="container">
           <div class="section-header">
             <h2 class="reveal">Ambiti di intervento</h2>
             <p class="reveal" data-delay="1">
-              Interventi conformi alle normative con tracciabilita completa.
+              Interventi conformi alle normative con tracciabilità completa.
             </p>
           </div>
           <div class="card-grid services-grid">
@@ -123,7 +151,7 @@
               <p>
                 Progettiamo, realizziamo e manteniamo impianti idrici antincendio e reti idranti per
                 edifici nuovi o esistenti. Ci occupiamo di collaudi, verifiche periodiche e
-                adeguamenti normativi, garantendo efficienza e affidabilita dell'impianto nel tempo.
+                adeguamenti normativi, garantendo efficienza e affidabilità dell'impianto nel tempo.
               </p>
             </div>
             <div class="card reveal" data-delay="3">
@@ -151,16 +179,16 @@
         </div>
       </section>
 
-      <section class="section">
+      <section class="section services-section">
         <div class="container">
           <div class="banner reveal">
-            <h3>Piani di manutenzione personalizzati</h3>
+            <h3>Scordati delle scadenze, pensiamo a tutto noi</h3>
             <p>
-              Definiamo periodicita e priorita in base al rischio e alla tipologia di attivita.
+              Creazione scheda cliente e gestione delle periodicità
             </p>
             <div class="hero-actions">
               <a class="button primary" href="contatti.html">Richiedi un piano</a>
-              <a class="button ghost" href="index.html">Torna alla home</a>
+              <a class="button hero-ghost home-services-cta" href="index.html">Torna alla home</a>
             </div>
           </div>
         </div>
@@ -173,12 +201,10 @@
           <div class="footer-brand">
             <img
               class="footer-logo"
-              src="assets/logo-bortone.webp"
+              src="assets/loghetto-black.svg"
               alt="Logo Bortone Antincendio"
               width="646"
               height="806"
-              loading="lazy"
-              decoding="async"
             />
             <div>
               <strong>Bortone Antincendio</strong>
@@ -194,12 +220,14 @@
         </div>
       </div>
       <div class="container footer-legal">
+        <a href="privacy.html">Privacy</a>
+        <br />
         © 2026 Bortone Antincendio SRL | CF 09780201001 | REA 1189188
         <br />
         PEC amministrazione@pec.bortoneantincendio.it
       </div>
     </footer>
 
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
   </body>
 </html>
