--- a/area-clienti.html
+++ b/area-clienti.html
@@ -9,8 +9,8 @@
       content="Portale clienti Bortone Antincendio: consulta impianti, interventi, documenti e richiedi assistenza."
     />
     <link rel="canonical" href="https://www.bortoneantincendio.it/area-clienti.html" />
-    <link rel="icon" type="image/png" href="assets/loghetto.png" />
-    <link rel="apple-touch-icon" href="assets/loghetto.png" />
+    <link rel="icon" type="image/png" href="assets/loghetto.png?v=2" />
+    <link rel="apple-touch-icon" href="assets/loghetto.png?v=2" />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#0b0b0b" />
     <meta property="og:site_name" content="Bortone Antincendio" />
@@ -54,6 +54,9 @@
           <a href="contatti.html">Contatti</a>
           <a class="active" href="area-clienti.html">Area Clienti</a>
         </nav>
+        <a href="https://wa.me/390670300981" target="_blank" rel="noopener" class="header-icon-link" aria-label="Scrivici su WhatsApp">
+          <img src="assets/icons8-whatsapp-64.png" class="header-icon" alt="" width="28" height="28">
+        </a>
       </div>
     </header>
 
@@ -199,12 +202,12 @@
           <div class="section-header">
             <h2 class="reveal">Il nostro portale</h2>
             <p class="reveal" data-delay="1">
-              <strong>Se siete già nostri clienti e desiderate conoscere lo stato di manutenzione dei vostri impianti e attrezzature, vi offriamo la possibilità di farlo tramite il nostro portale dedicato.</strong>
+              Se siete già nostri clienti e desiderate conoscere lo stato di manutenzione<br>delle vostre attrezzature, vi offriamo la possibilità di farlo tramite il nostro <strong>portale dedicato</strong>
             </p>
           </div>
           <div class="company-story-body reveal">
-            <p>
-              Il nostro portale è stato creato appositamente per gestire il lavoro in modo facile, organizzato e personalizzabile. Attraverso di esso potrete usufruire delle seguenti funzioni:
+            <p style="font-family: 'Source Sans 3', sans-serif; font-size: 1.12rem;">
+              Il nostro portale è stato creato appositamente per gestire il lavoro in modo facile, organizzato e personalizzabile. Attraverso di esso potrete usufruire delle seguenti <strong>funzioni:</strong>
             </p>
           </div>
 
@@ -239,7 +242,7 @@
             <div>
               <strong>Bortone Antincendio</strong>
               <p class="footer-highlight">Via Casilina, 313A 00176 Roma</p>
-              <p class="footer-highlight">Tel. &amp; Fax 06 / 70.300.981</p>
+              <p class="footer-highlight">Tel. 06 / 70.300.981</p>
             </div>
           </div>
         </div>
