--- a/contatti.html
+++ b/contatti.html
@@ -9,8 +9,8 @@
       content="Richiedi un sopralluogo tecnico: contatti telefonici, email e modulo per assistenza antincendio a Roma."
     />
     <link rel="canonical" href="https://www.bortoneantincendio.it/contatti.html" />
-    <link rel="icon" type="image/png" href="assets/loghetto.png" />
-    <link rel="apple-touch-icon" href="assets/loghetto.png" />
+    <link rel="icon" type="image/png" href="assets/loghetto.png?v=2" />
+    <link rel="apple-touch-icon" href="assets/loghetto.png?v=2" />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#0b0b0b" />
     <meta property="og:site_name" content="Bortone Antincendio" />
@@ -57,6 +57,9 @@
           <a class="active" href="contatti.html">Contatti</a>
           <a href="area-clienti.html">Area Clienti</a>
         </nav>
+        <a href="https://wa.me/390670300981" target="_blank" rel="noopener" class="header-icon-link" aria-label="Scrivici su WhatsApp">
+          <img src="assets/icons8-whatsapp-64.png" class="header-icon" alt="" width="28" height="28">
+        </a>
       </div>
     </header>
 
@@ -131,6 +134,7 @@
             </div>
             <div class="contact-card-header">
               <h2 class="reveal">Passaci a trovare</h2>
+              <p class="reveal" data-delay="1">Siamo a Roma, in Via Casilina 313/A.</p>
             </div>
             <div class="card reveal contact-form-card">
               <form id="contact-form" class="form-grid" action="https://formspree.io/f/mykdylqn" method="post">
@@ -155,6 +159,7 @@
                 ></iframe>
               </div>
               <div class="hero-actions map-actions">
+                <p class="form-hint contact-map-hint">Scopri subito il percorso migliore</p>
                 <a
                   class="button primary contact-cta-btn"
                   href="https://www.google.com/maps/search/?api=1&query=Via+Casilina+313A+00176+Roma"
@@ -184,7 +189,7 @@
             <div>
               <strong>Bortone Antincendio</strong>
               <p class="footer-highlight">Via Casilina, 313A 00176 Roma</p>
-              <p class="footer-highlight">Tel. &amp; Fax 06 / 70.300.981</p>
+              <p class="footer-highlight">Tel. 06 / 70.300.981</p>
             </div>
           </div>
         </div>
