--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       content="Manutenzione e gestione impianti antincendio a Roma. Estintori, porte tagliafuoco, reti idranti e rivelazione incendi con assistenza tecnica."
     />
     <link rel="canonical" href="https://www.bortoneantincendio.it/" />
-    <link rel="icon" type="image/png" href="assets/loghetto.png" />
-    <link rel="apple-touch-icon" href="assets/loghetto.png" />
+    <link rel="icon" type="image/png" href="assets/loghetto.png?v=2" />
+    <link rel="apple-touch-icon" href="assets/loghetto.png?v=2" />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#0b0b0b" />
     <meta property="og:site_name" content="Bortone Antincendio" />
@@ -84,6 +84,9 @@
           <a href="contatti.html">Contatti</a>
           <a href="area-clienti.html">Area Clienti</a>
         </nav>
+        <a href="https://wa.me/390670300981" target="_blank" rel="noopener" class="header-icon-link" aria-label="Scrivici su WhatsApp">
+          <img src="assets/icons8-whatsapp-64.png" class="header-icon" alt="" width="28" height="28">
+        </a>
       </div>
     </header>
 
@@ -286,7 +289,7 @@
             <div>
               <strong>Bortone Antincendio</strong>
               <p class="footer-highlight">Via Casilina, 313A 00176 Roma</p>
-              <p class="footer-highlight">Tel. &amp; Fax 06 / 70.300.981</p>
+              <p class="footer-highlight">Tel. 06 / 70.300.981</p>
             </div>
           </div>
         </div>
